--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Elan & Nvision 2022</title>
+    <title>Elan & ηVision 2022</title>
     
   </head>
   <body>
