--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      .divLoader {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0;
+        background: #17032a;
+      }
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,9 +39,13 @@
     <title>Elan & ηVision 2022</title>
     
   </head>
-  <body>
+  <body style="margin: 0;overflow-x: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="divLoader">
+        <img src="./loader.gif" alt="Loading....">
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
