--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
         padding: 0;
         margin: 0;
         background: #17032a;
@@ -37,13 +38,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Elan & ηVision 2022</title>
-    
   </head>
-  <body style="margin: 0;overflow-x: hidden;">
+  <body style="margin: 0; overflow-x: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="divLoader">
-        <img src="./loader.gif" alt="Loading....">
+        <img src="./loader.gif" alt="Loading...." />
       </div>
     </div>
     <!--
