sponsor added in loader

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         padding: 0;
         margin: 0;
         background: #17032a;
+        flex-direction: column;
       }
     </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
@@ -47,6 +48,7 @@
     <div id="root">
       <div class="divLoader">
         <img src="./loader.gif" alt="Loading...." />
+        <img src="./hero-min.jpg"/ height="200" width="500">
       </div>
     </div>
     <!--
