--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <div id="root">
       <div class="divLoader">
         <img src="./loader.gif" alt="Loading...." />
-        <img src="./hero-min.jpg"/ height="200" width="500">
+        <img src="./hero-min.png" height="100" width="500" />
       </div>
     </div>
     <!--
